--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,4 +1,3 @@
-/* styles.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #121212;
@@ -12,43 +11,35 @@ body {
     height: 100vh;
     overflow: hidden;
 }
-
 table {
     width: 100%;
     border-collapse: collapse;
     margin: 0;
 }
-
 table, th, td {
     border: 1px solid #444444;
 }
-
 th, td {
     padding: 10px;
     text-align: left;
 }
-
 th {
     background-color: #1f1f1f;
     position: sticky;
     top: 0;
     z-index: 1;
 }
-
 tr:nth-child(even) {
     background-color: #2c2c2c;
 }
-
 tr:hover {
     background-color: #444444;
 }
-
 .scrollable {
     height: 100%;
     width: 100%;
     overflow-y: auto;
 }
-
 .container {
     width: 90%;
     height: 90%;
@@ -56,20 +47,46 @@ tr:hover {
     flex-direction: column;
     align-items: center;
 }
-
-.button-container {
-    margin: 10px;
+.switch-label {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
 }
-
-button {
-    padding: 10px 20px;
-    margin: 5px;
-    background-color: #444444;
-    color: #ffffff;
-    border: none;
+.switch-label input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider {
+    position: absolute;
     cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
 }
-
-button:hover {
-    background-color: #666666;
+.slider.round {
+    border-radius: 34px;
+}
+.slider.round:before {
+    border-radius: 50%;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+}
+input:checked + .slider {
+    background-color: #2196F3;
+}
+input:checked + .slider:before {
+    transform: translateX(26px);
 }
